--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
-      <a href="{{ "/" | relative_url }}" class="site-title"><img src="assets/images/itl-logo.png"/>{{ site.title }}</a>
+      <a href="{{ "/" | relative_url }}" class="site-title"><img src="/assets/images/itl-logo.png"/>{{ site.title }}</a>
       <nav class="site-nav">
         {% include navigation.html %}
       </nav>
