--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -8,14 +8,14 @@
         <a class="pagination-item" href="{{ paginator.previous_page_path | relative_url }}">{{ site.text.pagination.newer | default: "Older" }}</a>
       {% endif %}
     {% else %}
-      <span class="pagination-item disabled">{{ site.text.pagination.newer | default: "Newer" }}</span>
+      <span class="pagination-item disabled">{{ site.text.pagination.newer | default: "上一页" }}</span>
     {% endif %}
   </div>
   <div class="right">
     {% if paginator.next_page %}
       <a class="pagination-item" href="{{ paginator.next_page_path | relative_url }}">{{ site.text.pagination.older | default: "Older" }}</a>
     {% else %}
-      <span class="pagination-item disabled">{{ site.text.pagination.older | default: "Older" }}</span>
+      <span class="pagination-item disabled">{{ site.text.pagination.older | default: "下一页" }}</span>
     {% endif %}
   </div>
   <div class="pagination-meta">Page {{ paginator.page }} of {{ paginator.total_pages }}</div>
